Fixed title overflow issue

--- a/public/landingPage.css
+++ b/public/landingPage.css
@@ -8,7 +8,7 @@ body, html {
 #landing-page {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     height: 100%;
     background-color: rgba(255, 253, 240, 0.95);
@@ -53,7 +53,7 @@ hr {
     flex-direction: column;
     justify-content: space-around;
     text-align: center;
-    margin-top: 30%;
+    margin-top: 20px;
 }
 
 #landing-page img {
